--- a/src/components/style/farmer/FarmerLayout.css
+++ b/src/components/style/farmer/FarmerLayout.css
@@ -28,6 +28,7 @@
     overflow-y: scroll;
     /* background: linear-gradient(90deg, rgb(60, 136, 25),rgb(79, 183, 65)); */
     background: #ebf1e8;
+    color: black;
   }
 
 
