--- a/src/style/farmer/Market.module.css
+++ b/src/style/farmer/Market.module.css
@@ -21,6 +21,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.2s ease;
+    max-width: 200px;
   }
   
   .addButton:hover {
@@ -78,3 +79,8 @@
     }
   }
   
+.filter {
+  display: flex;
+  gap: 5px;
+  margin: 10px;
+}
