--- a/src/style/Admin/Market_manage.module.css
+++ b/src/style/Admin/Market_manage.module.css
@@ -1,8 +1,4 @@
-.container {
-    padding: 24px;
-  }
-  
-  .title {
+/* .title {
     font-size: 1.4rem;
     color: #1b4332;
     margin-bottom: 16px;
@@ -72,10 +68,10 @@
   }
 
   .adddiv{
-    /* background: #000; */
+
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
+
   }
 
   .addButton {
@@ -91,5 +87,32 @@
   }
   .addButton:hover{
     background-color: rgb(70, 130, 70);
+  } */
+
+
+
+  .container {
+    padding: 30px;
+    background-color: #f9fafb;
+    min-height: 100vh;
+  }
+  
+  .title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #1f2937;
+  }
+  
+  .subtitle {
+    font-size: 1rem;
+    color: #6b7280;
+    margin-bottom: 30px;
+  }
+  
+  .cardGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    gap: 24px;
   }
   
